# saldeosmart-mcp

./: .codespellrc  .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.pl.md  SECURITY.md  THIRD_PARTY_NOTICES.md  lychee.toml  mkdocs.yml  pyproject.toml  versions.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: api-mirror-sync.yml  ci.yml  docs-deploy.yml  docs.yml  pages.yml  release.yml  tool-catalog-check.yml
0.2.1/: 404.html  index.html  objects.inv  sitemap.xml
0.2.1/ERROR_CODES/: index.html
0.2.1/_data/: error_meanings.yaml
0.2.1/code-of-conduct/: index.html
0.2.1/contributing/: index.html
0.2.1/explanation/: index.html
0.2.1/explanation/architecture/: index.html
0.2.1/explanation/concurrency/: index.html
0.2.1/explanation/design-decisions/: index.html
0.2.1/explanation/request-signing/: index.html
0.2.1/explanation/security-and-privacy/: index.html
0.2.1/how-to/: index.html
0.2.1/how-to/add-a-tool/: index.html
0.2.1/how-to/bump-saldeo-api-version/: index.html
0.2.1/how-to/configure-claude-code/: index.html
0.2.1/how-to/configure-claude-desktop/: index.html
0.2.1/how-to/configure-cursor/: index.html
0.2.1/how-to/configure-other-clients/: index.html
0.2.1/how-to/debug-auth/: index.html
0.2.1/how-to/install/: index.html
0.2.1/how-to/run-smoke-test/: index.html
0.2.1/pl/: index.html
0.2.1/pl/code-of-conduct/: index.html
0.2.1/pl/contributing/: index.html
0.2.1/pl/explanation/: index.html
0.2.1/pl/explanation/architecture/: index.html
0.2.1/pl/explanation/concurrency/: index.html
0.2.1/pl/explanation/design-decisions/: index.html
0.2.1/pl/explanation/request-signing/: index.html
0.2.1/pl/explanation/security-and-privacy/: index.html
0.2.1/pl/how-to/: index.html
0.2.1/pl/how-to/add-a-tool/: index.html
0.2.1/pl/how-to/bump-saldeo-api-version/: index.html
0.2.1/pl/reference/: index.html
0.2.1/pl/security/: index.html
0.2.1/pl/tutorials/: index.html
0.2.1/reference/: index.html
0.2.1/reference/api-versions/: index.html
0.2.1/reference/changelog/: index.html
0.2.1/reference/configuration/: index.html
0.2.1/reference/error-codes/: index.html
0.2.1/reference/models/: index.html
0.2.1/reference/tools/: index.html
0.2.1/security/: index.html
0.2.1/stylesheets/: extra.css
0.2.1/tutorials/: index.html
0.2.1/tutorials/first-tool-call/: index.html
0.2.1/tutorials/quickstart/: index.html
dev/: 404.html  index.html  sitemap.xml
dev/code-of-conduct/: index.html
dev/contributing/: index.html
dev/explanation/: index.html
dev/explanation/architecture/: index.html
dev/explanation/concurrency/: index.html
dev/explanation/design-decisions/: index.html
dev/explanation/request-signing/: index.html
dev/explanation/security-and-privacy/: index.html
dev/how-to/: index.html
dev/how-to/add-a-tool/: index.html
dev/how-to/bump-saldeo-api-version/: index.html
dev/how-to/configure-claude-code/: index.html
dev/how-to/configure-claude-desktop/: index.html
dev/how-to/configure-cursor/: index.html
dev/how-to/configure-other-clients/: index.html
dev/how-to/debug-auth/: index.html
dev/how-to/install/: index.html
dev/how-to/run-smoke-test/: index.html
dev/pl/: index.html
dev/pl/code-of-conduct/: index.html
dev/pl/contributing/: index.html
dev/pl/explanation/: index.html
dev/pl/how-to/: index.html
dev/pl/reference/: index.html
dev/pl/security/: index.html
dev/pl/tutorials/: index.html
dev/reference/: index.html
dev/reference/api-versions/: index.html
dev/reference/changelog/: index.html
dev/reference/configuration/: index.html
dev/reference/error-codes/: index.html
dev/reference/models/: index.html
dev/reference/tools/: index.html
dev/search/: search_index.json
dev/security/: index.html
dev/tutorials/: index.html
dev/tutorials/first-tool-call/: index.html
dev/tutorials/quickstart/: index.html
docker/: Dockerfile
docs/: ERROR_CODES.md  code-of-conduct.md  contributing.md  index.html  index.md  index.pl.md  security.md  style.css
docs/explanation/: architecture.md  concurrency.md  design-decisions.md  index.md  index.pl.md  request-signing.md  security-and-privacy.md
docs/how-to/: add-a-tool.md  bump-saldeo-api-version.md  configure-claude-code.md  configure-claude-desktop.md  configure-cursor.md  configure-other-clients.md  debug-auth.md  index.md  index.pl.md  install.md  run-smoke-test.md
docs/reference/: changelog.md  index.md  index.pl.md  licenses.pl.md  models.md  models.pl.md
docs/tutorials/: first-tool-call.md  index.md  index.pl.md  quickstart.md  quickstart.pl.md
scripts/: check_docstring_contract.py  check_tool_coverage.py  check_translations.py  gen_api_versions.py  gen_configuration.py  gen_error_codes.py  gen_licenses.py  gen_tool_catalog.py  smoke_test.py  sync_api_mirror.py
src/saldeosmart_mcp/: __init__.py  __main__.py  client.py  config.py  errors.py  logging.py  models.py  server.py
src/saldeosmart_mcp/http/: __init__.py  attachments.py  client.py  signing.py  xml.py
src/saldeosmart_mcp/models/: __init__.py  accounting_close.py  bank.py  catalog.py  common.py  companies.py  contractors.py  documents.py  financial_balance.py  invoices.py  personnel.py
src/saldeosmart_mcp/tools/: __init__.py  _builders.py  _documents_builders.py  _runtime.py  accounting_close.py  bank.py  catalog.py  companies.py  contractors.py  dimensions.py  documents.py  endpoints.py  financial_balance.py  invoices.py  personnel.py
tests/: conftest.py  test_client.py  test_layering.py  test_request_builders.py  test_server.py
tests/unit/: test_architecture.py  test_errors.py  test_logging.py
tests/unit/http/: test_attachments.py  test_client.py
tests/unit/models/: test_documents.py  test_serialization.py  test_validators.py
tests/unit/tools/: test_builders.py  test_empty_input_guard.py
(+81 files in other folders)
