[project]
name = "saldeosmart-mcp"
version = "0.2.1"
description = "MCP server for reading and updating documents in SaldeoSMART"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Piotr Klinski", email = "piotrklinski@gmail.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "saldeosmart",
    "saldeo",
    "accounting",
    "fastmcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
]

[project.urls]
Homepage      = "https://github.com/piotrlinski/saldeosmart-mcp"
Repository    = "https://github.com/piotrlinski/saldeosmart-mcp"
Issues        = "https://github.com/piotrlinski/saldeosmart-mcp/issues"
Documentation = "https://piotrlinski.github.io/saldeosmart-mcp/"
Changelog     = "https://github.com/piotrlinski/saldeosmart-mcp/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "griffe-pydantic>=1.1",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
    "mkdocs-include-markdown-plugin>=6.2",
    "mkdocs-redirects>=1.2",
    "mkdocs-static-i18n>=1.2",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mike>=2.1",
    "pymdown-extensions>=10.9",
    "codespell>=2.3",
]

[project.scripts]
saldeosmart-mcp = "saldeosmart_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saldeosmart_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "T20", "A", "RUF", "PERF", "PT"]
# RUF002/RUF003 flag "ambiguous" Unicode (en-dash, etc.) in docstrings/comments.
# We use them deliberately for Polish-language API docs and human-readable ranges
# like `1–12` — false positives in this codebase.
ignore = ["RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# CLI scripts legitimately write to stdout/stderr; the doc generators emit
# long markdown lines (tables, anchors, JSON payloads) where wrapping hurts
# readability of the generated output.
"scripts/*" = ["T201", "T203", "E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]
